--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,6 @@ Reports/IASF_2025/iasf_report.lot
 Reports/IASF_2025/iasf_report.toc
 Reports/IASF_2025/iasf_report.run.xml
 Reports/IASF_2025/iasf_report.synctex.gz
+
+.venv/
+
