--- a/BabySphere/package.json
+++ b/BabySphere/package.json
@@ -13,30 +13,30 @@
     "preset": "jest-expo"
   },
   "dependencies": {
-    "@expo/vector-icons": "^14.0.2",
+    "@expo/vector-icons": "^14.0.4",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^21.5.0",
     "@react-native-firebase/firestore": "^21.5.0",
-    "@react-native-picker/picker": "^2.10.2",
+    "@react-native-picker/picker": "^2.9.0",
     "@react-navigation/bottom-tabs": "^7.1.3",
     "@react-navigation/elements": "^2.2.4",
     "@react-navigation/native": "^7.0.13",
     "@react-navigation/native-stack": "^7.1.14",
-    "@shopify/react-native-skia": "^1.7.6",
+    "@shopify/react-native-skia": "^1.5.0",
     "class-variance-authority": "^0.7.1",
-    "expo": "^52.0.7",
+    "expo": "~52.0.20",
     "expo-av": "~15.0.1",
     "expo-font": "~13.0.1",
     "expo-image-picker": "^16.0.3",
     "expo-linear-gradient": "^14.0.1",
-    "expo-linking": "~7.0.2",
+    "expo-linking": "~7.0.3",
     "expo-notifications": "^0.29.11",
-    "expo-router": "^4.0.11",
+    "expo-router": "~4.0.15",
     "expo-sharing": "^13.0.0",
-    "expo-splash-screen": "~0.29.11",
+    "expo-splash-screen": "^0.29.18",
     "expo-status-bar": "~2.0.0",
-    "expo-system-ui": "~4.0.3",
+    "expo-system-ui": "~4.0.6",
     "expo-video": "~2.0.3",
     "expo-web-browser": "~14.0.1",
     "firebase": "^10.14.1",
@@ -45,16 +45,16 @@
     "lucide-react-native": "^0.462.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
-    "react-native": "0.76.2",
+    "react-native": "^0.76.5",
     "react-native-calendars": "^1.1307.0",
     "react-native-chart-kit": "^6.12.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-get-random-values": "~1.11.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "^4.12.0",
-    "react-native-screens": "~4.1.0",
+    "react-native-screens": "~4.4.0",
     "react-native-share": "^12.0.3",
-    "react-native-svg": "^15.10.1",
+    "react-native-svg": "^15.8.0",
     "react-native-vector-icons": "^10.2.0",
     "react-native-video": "^6.8.2",
     "react-native-view-shot": "^4.0.3",
