--- a/BabySphere/package.json
+++ b/BabySphere/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
+    "@nativescript/core": "^8.8.6",
     "@react-native-community/datetimepicker": "^8.2.0",
     "@react-native-community/masked-view": "^0.1.11",
     "@react-native-firebase/app": "^21.5.0",
@@ -61,6 +62,7 @@
     "react-native-web": "~0.19.10",
     "react-native-websocket": "^1.0.2",
     "react-native-webview": "^13.12.5",
+    "react-nativescript": "^5.0.0",
     "tailwind-merge": "^2.5.5",
     "victory-native": "^41.14.0"
   },
