dk what am doing alahu akbar

--- a/.gitignore
+++ b/.gitignore
@@ -82,5 +82,7 @@ posture-detection/babysphere-3d697-firebase-adminsdk-bx0hc-ea986b3209.json
 posture-detection/pyfi-demo-firebase-adminsdk-f64d3-041b367b77.json
 
 WellnessDetector/
+babysphere-3d697-firebase-adminsdk-bx0hc-17e9eb084c.json
+
 
 
