final report built and cover page done

--- a/.gitignore
+++ b/.gitignore
@@ -92,6 +92,19 @@ Reports/IEEE paper/IEEE-conference-template-062824.toc
 Reports/IEEE paper/IEEE-conference-template-062824.run.xml
 Reports/IEEE paper/IEEE-conference-template-062824.synctex.gz
 
+Reports/Project_Report_8sem/Report.aux
+Reports/Project_Report_8sem/Report.fdb_latexmk
+Reports/Project_Report_8sem/Report.fls
+Reports/Project_Report_8sem/Report.log
+Reports/Project_Report_8sem/Report.bbl
+Reports/Project_Report_8sem/Report.bbl-SAVE-ERROR
+Reports/Project_Report_8sem/Report.bcf
+Reports/Project_Report_8sem/Report.blg
+Reports/Project_Report_8sem/Report.lof
+Reports/Project_Report_8sem/Report.lot
+Reports/Project_Report_8sem/Report.toc
+Reports/Project_Report_8sem/Report.run.xml
+Reports/Project_Report_8sem/Report.synctex.gz
 
 venv/
 posture-detection/babysphere-3d697-firebase-adminsdk-bx0hc-ea986b3209.json
